--- a/src/app/authentification/login/login.component.html
+++ b/src/app/authentification/login/login.component.html
@@ -36,7 +36,7 @@
       </button>
       <hr>
       <button type="button" class="btn btn-primary btn-block" (click)="onRegister()">Noch kein Mitglied? Hier registrieren</button>
-      <button type="button" class="btn btn-primary btn-block" (click)="onForgoPassword()">Haben Sie ihr Paswort vergessen?</button>
+      <button type="button" class="btn btn-primary btn-block" (click)="onForgoPassword()">Haben Sie ihr Passwort vergessen?</button>
     </form>
   </div>
 </div>
