changed error message

--- a/src/app/authentification/forgot-password/forgot-password.component.html
+++ b/src/app/authentification/forgot-password/forgot-password.component.html
@@ -27,7 +27,7 @@
           formControlName="email"
           class="form-control">
       </div>
-      <i *ngIf="!isDataValid">Der Benutzername und die E-mail passen nicht zusammen</i>
+      <i *ngIf="!isDataValid">Der Benutzername und die E-mail passen nicht zusammen, oder es wurde bereits eine E-Mail angefordert.</i>
       <br>
       <br>
       <button type="submit" class="btn btn-info btn-block" [disabled]="forgotPasswordForm.invalid">
