added patchnotes to the home page

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -20,4 +20,9 @@
     </ul>
     <li>Die Buttons in den Spalten "An Veranstaltung Teilnehmen" und "Für User sichtbar" wurden durch Checkboxen ersetzt und die Tabellenüberschrift an dieser Stelle wurde nocheinmal leicht überarbeitet.</li>
   </ul>
+  <br>
+  <h4>01.02.2021</h4>
+  <ul>
+    <li>Passwort-vergessen Funktion eingebaut.</li>
+  </ul>
 </div>
