split user into user and auth and adjusted all related functions. Also splitted changeUser into editUser and editPassword.

--- a/src/app/authentification/forgot-password/forgot-password.component.html
+++ b/src/app/authentification/forgot-password/forgot-password.component.html
@@ -11,21 +11,23 @@
       (ngSubmit)="onSubmit()">
       <div class="form-group">
         <span for="username">Benutzername:</span>
-        <i *ngIf="forgotPasswordForm.get('username').invalid && forgotPasswordForm.get('username').touched"> Bitte geben Sie Ihren Beutzernamen ein.</i>
+        <i *ngIf="forgotPasswordForm.get('username').invalid && forgotPasswordForm.get('username').touched"> {{ usernameError }}</i>
         <input
           type="text"
           id="username"
           formControlName="username"
-          class="form-control">
+          class="form-control"
+          (ngModelChange)="changedUsername()">
       </div>
       <div class="form-group">
         <span for="password">E-mail:</span>
-        <i *ngIf="forgotPasswordForm.get('email').invalid && forgotPasswordForm.get('email').touched"> Bitte geben Sie Ihre E-Mail ein.</i>
+        <i *ngIf="forgotPasswordForm.get('email').invalid && forgotPasswordForm.get('email').touched"> {{ emailError }}</i>
         <input
           type="email"
           id="email"
           formControlName="email"
-          class="form-control">
+          class="form-control"
+          (ngModelChange)="changedEmail()">
       </div>
       <i *ngIf="!isDataValid">Der Benutzername und die E-mail passen nicht zusammen, oder es wurde bereits eine E-Mail angefordert.</i>
       <br>
