made the button for edit password invisible for admins and fixed the auth guard, to make it impossible for admins to enter the page by changing the url manualy

--- a/src/app/user/profile/profile.component.html
+++ b/src/app/user/profile/profile.component.html
@@ -11,7 +11,7 @@
     <tr>
       <th class="profile-height">Passwort:</th>
       <td>**********</td>
-      <td class="profile-width"><button class="btn btn-primary btn-block" (click)="onEditPassword()">Passwort bearbeiten</button></td>
+      <td *ngIf="!isAdmin" class="profile-width"><button class="btn btn-primary btn-block" (click)="onEditPassword()">Passwort bearbeiten</button></td>
     </tr>
     <tr>
       <th class="profile-height">Vorname:</th>
