--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -23,6 +23,13 @@
   <br>
   <h4>01.02.2021</h4>
   <ul>
-    <li>Passwort-vergessen Funktion eingebaut.</li>
+    <li>Passwort-vergessen Funktion eingebaut. Allerdings funktioniert sie zur Zeit nur mit einer einzigen E-Mail Adresse, da es sich bei der verwendeten Software um eine Gratisversion handelt, die nur für Testzwecke geeignet ist.</li>
+  </ul>
+  <br>
+  <h4>08.02.2021</h4>
+  <ul>
+    <li>Die Profilansicht wurde leicht überarbeitet und die Bearbietung angepasst.</li>
+    <li>Ein neuer Button wurde auf der Meeting-List Seite hinzugefügt, um die Änderungen zu verwerfen, wenn man sie nicht speichern möchte.</li>
+    <li>Es ist nun möglich sich sowohl mit seinem Benutzernamen, als auch mit seiner E-Mail anzumelden.</li>
   </ul>
 </div>
