updated bootstrap from version 3 to 4 and separated the datetime input into a date and a time input

--- a/src/app/meeting/meeting-edit/meeting-edit.component.html
+++ b/src/app/meeting/meeting-edit/meeting-edit.component.html
@@ -23,14 +23,22 @@
         placeholder="Veranstaltungsname"
         autofocus>
       </div>
-      <div class="form-group">
-        <label for="datetime">Datum & Uhrzeit: </label>
+      <div class="form-group w-50">
+        <label for="date">Datum: </label>
         <input
-        type="datetime-local"
-        id="datetime"
-        formControlName="datetime"
-        class="form-control"
-        min="{{ now }}">
+          type="date"
+          id="date"
+          formControlName="date"
+          class="form-control"
+          min="{{ today }}">
+      </div>
+      <div class="form-group w-50">
+        <label for="time">Uhrzeit: </label>
+        <input
+          type="time"
+          id="time"
+          formControlName="time"
+          class="form-control">
       </div>
       <div class="form-group">
         <mat-checkbox formControlName="display" labelPosition="before" color="primary">Anzeigen:</mat-checkbox>
