--- a/src/app/meeting/meeting-edit/meeting-edit.component.html
+++ b/src/app/meeting/meeting-edit/meeting-edit.component.html
@@ -23,7 +23,7 @@
         placeholder="Veranstaltungsname"
         autofocus>
       </div>
-      <div class="form-group w-50">
+      <div class="form-group col-xs-6">
         <label for="date">Datum: </label>
         <input
           type="date"
@@ -32,7 +32,7 @@
           class="form-control"
           min="{{ today }}">
       </div>
-      <div class="form-group w-50">
+      <div class="form-group col-xs-6">
         <label for="time">Uhrzeit: </label>
         <input
           type="time"
