--- a/src/app/meeting/meeting-edit/meeting-edit.component.css
+++ b/src/app/meeting/meeting-edit/meeting-edit.component.css
@@ -1,3 +1,17 @@
 textarea {
-  resize: vertical;
+  box-sizing: unset;
+  max-width: 515px;
+}
+
+.datetime {
+  margin-right: -15px;
+  width: 50%;
+}
+
+.date {
+  margin-left: -15px;
+}
+
+.time {
+  margin-left: 45px;
 }
