--- a/src/app/meeting/meeting-edit/meeting-edit.component.html
+++ b/src/app/meeting/meeting-edit/meeting-edit.component.html
@@ -16,15 +16,15 @@
         <label for="name">Veranstaltungsname: </label>
         <i *ngIf="meetingForm.get('name').invalid && meetingForm.get('name').touched || nameAlreadyExists"> {{nameError}}</i>
         <input
-        type="text"
-        id="name"
-        formControlName="name"
-        class="form-control"
-        placeholder="Veranstaltungsname"
-        autofocus
-        (ngModelChange)="changedName()">
+          type="text"
+          id="name"
+          formControlName="name"
+          class="form-control"
+          placeholder="Veranstaltungsname"
+          autofocus
+          (ngModelChange)="changedName()">
       </div>
-      <div class="form-group col-xs-6">
+      <div class="form-group col-xs-6 datetime date">
         <label for="date">Datum: </label>
         <input
           type="date"
@@ -33,7 +33,7 @@
           class="form-control"
           min="{{ today }}">
       </div>
-      <div class="form-group col-xs-6">
+      <div class="form-group col-xs-6 datetime time">
         <label for="time">Uhrzeit: </label>
         <input
           type="time"
@@ -49,7 +49,9 @@
           formControlName="description"
           class="form-control"
           placeholder="Hier können Sie Details zu Ihrer Veranstaltung eintragen"
-          rows="{{textareaLines}}"
+          cdkTextareaAutosize
+          cdkAutosizeMinRows="5"
+          cdkAutosizeMaxRows="19"
           (ngModelChange)="changedDescription()">{{ meeting.description }}</textarea>
       </div>
       <div class="form-group">
