--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -10,6 +10,26 @@
 <div class="col-xs-6">
   <h3>Patchnotes:</h3>
   <hr>
+  <h4>27.04.2021</h4>
+  <ul>
+    <li>Reihenfolge der Patchnotes geändert, neuste stehen nun oben.</li>
+    <li>Meetings besitzen nun eine Deteilbeschreibung. Diese kann wie alle anderen Informationen angezeigt und bearbeitet werden.</li>
+    <li>Jedes Meeting hat nun außerdem einen Autor. Dieser ist allerdings nicht veränderbar.</li>
+    <li>In der Liste der Meetings kann man auf den Namen eines Meetings klicken und sich Dieses Meeting dann im einzelnen angucken. Über dieses Fenster lässt sich auch das Bearbeitungsfenster aufrufen, sofern man Admin ist. Die Reihe in der Liste in der sich gerade die Maus befindet wird übrigens mit einer anderen Farbe hervorgehoben, wenn man in der Spalte Veranstaltungsname ist.</li>
+  </ul>
+  <br>
+  <h4>08.02.2021</h4>
+  <ul>
+    <li>Die Profilansicht wurde leicht überarbeitet und die Bearbietung angepasst.</li>
+    <li>Ein neuer Button wurde auf der Meeting-List Seite hinzugefügt, um die Änderungen zu verwerfen, wenn man sie nicht speichern möchte.</li>
+    <li>Es ist nun möglich sich sowohl mit seinem Benutzernamen, als auch mit seiner E-Mail anzumelden.</li>
+  </ul>
+  <br>
+  <h4>01.02.2021</h4>
+  <ul>
+    <li>Passwort-vergessen Funktion eingebaut. Allerdings funktioniert sie zur Zeit nur mit einer einzigen E-Mail Adresse, da es sich bei der verwendeten Software um eine Gratisversion handelt, die nur für Testzwecke geeignet ist.</li>
+  </ul>
+  <br>
   <h4>11.12.2020</h4>
   <ul>
     <li>Rechtschreibfehler auf der Startseite korrigiert.</li>
@@ -19,17 +39,5 @@
       <li>Bitte keinen der voreingestelten Bentutzer löschen. Falls das ausversehen mal passieren sollte, dann fügt ihn bitte wieder hinzu.</li>
     </ul>
     <li>Die Buttons in den Spalten "An Veranstaltung Teilnehmen" und "Für User sichtbar" wurden durch Checkboxen ersetzt und die Tabellenüberschrift an dieser Stelle wurde nocheinmal leicht überarbeitet.</li>
-  </ul>
-  <br>
-  <h4>01.02.2021</h4>
-  <ul>
-    <li>Passwort-vergessen Funktion eingebaut. Allerdings funktioniert sie zur Zeit nur mit einer einzigen E-Mail Adresse, da es sich bei der verwendeten Software um eine Gratisversion handelt, die nur für Testzwecke geeignet ist.</li>
-  </ul>
-  <br>
-  <h4>08.02.2021</h4>
-  <ul>
-    <li>Die Profilansicht wurde leicht überarbeitet und die Bearbietung angepasst.</li>
-    <li>Ein neuer Button wurde auf der Meeting-List Seite hinzugefügt, um die Änderungen zu verwerfen, wenn man sie nicht speichern möchte.</li>
-    <li>Es ist nun möglich sich sowohl mit seinem Benutzernamen, als auch mit seiner E-Mail anzumelden.</li>
   </ul>
 </div>
